--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -285,6 +285,13 @@ hr {
     left: 0;
 }
 
+.field.has-addons {
+    .control:not(:last-child) .file-name {
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+    }
+}
+
 .book-info-table {
     //  Using @extend lets you share a set of CSS properties from one selector to another
     @extend .table;
@@ -300,6 +307,9 @@ hr {
         color: $scheme-invert-ter;
         white-space: nowrap;
     }
+}
+.book-info-table.has-one-fullwidth-td td {
+    width: 100%;
 }
 // .button-leftmost {
 //     margin-left: 0;
