--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -6,18 +6,24 @@
 {% endblock %}
 {% else %}
 <section class="section">
-<div class="book-title">{{ error_msg }}</div>
-{% if import_url %}
-<form method=post action="{{ url_for('main.import_book') }}">
-{{ csrf_token_field() }}
-<input type=hidden name=ext_url value="{{ import_url }}"/>
-<button type=submit class="button inline-block green-color button-leftmost" style="margin-top:.5rem;">
-    <i class="fas fa-file-import"></i> {# <i class="fas fa-cloud-download-alt"></i> #}
-    Import Book
-</button>
-</form>
+    <div class="container">
+        {% if error_msg %}
+        <div class="title is-3">{{ error_msg }}</div>
+        {% endif %}
+        {% if import_url %}
+        <form method=post action="{{ url_for('main.import_book') }}">
+        {{ csrf_token_field() }}
+        <input type=hidden name=ext_url value="{{ import_url }}"/>
+        <button type=submit class="button green-color">
+            <span class="icon">
+                <i class="fas fa-file-import"></i> {# <i class="fas fa-cloud-download-alt"></i> #}
+            </span>
+            <span>Import Book</span>
+        </button>
+        </form>
+        {% endif %}
+    </div>
 </section>
-{% endif %}
 {% endif %}
 
 {% endblock %}
